--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 <!-- 		<h2.version>1.4.199</h2.version> -->
+		<hibernate.version>5.4.9.Final</hibernate.version>
 	</properties>
 
 	<dependencies>
